<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/trophy"/>

        <TextView
            android:id="@+id/player_name_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="cursive"
            android:textColor="@color/primary_blue"
            android:textSize="36sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="cursive"
            android:textColor="@color/primary_blue"
            android:textSize="36sp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_quiz_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_quiz" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/retry" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:id="@+id/main_menu_button"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"/>
    </LinearLayout>
</LinearLayout>
